trunk/Archive2/c1/3da7e00250991e/output
main.cpp: In function 'int main()':
main.cpp:19:16: error: 'struct base' has no member named 'other'
     d.test(10).other(25);
                ^
